--- a/zfs_notes.html
+++ b/zfs_notes.html
@@ -65,8 +65,8 @@
 	</ul>
 	<p>Note that that the boot directory should be seperate from this zpool. This can be done by putting it on a seperate partion or pool. Another way would be creating an unencrypted zpool and then creating an unencrypted dataset for the boot directory and an encrypted dataset for the rest of the root file system.</p>
 	<ul>
-		<li>https://wiki.archlinux.org/index.php/Install_Arch_Linux_on_ZFS</li>
-		<li>https://wiki.archlinux.org/index.php/ZFS</li>
+		<li><a href="ttps://wiki.archlinux.org/index.php/Install_Arch_Linux_on_ZFS">ttps://wiki.archlinux.org/index.php/Install_Arch_Linux_on_ZFS</a></li>
+		<li><a href="ttps://wiki.archlinux.org/index.php/ZFS">ttps://wiki.archlinux.org/index.php/ZFS</a></li>
 	</ul>
 	<h1>Resize</h1>
 	<h2>Increase</h2>
