add script to create index

--- a/shrink_zfs_pool.html
+++ b/shrink_zfs_pool.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="jh___.css" /link>
-		<title>Shrink zfs pool.</title>
+		<link rel="stylesheet" href="style.css" /link>
+		<title>Shrink zfs pool</title>
 	</head>
 	<body>
 		<h1>Shrink zfs pool.</h1>
