--- a/zfs_notes.html
+++ b/zfs_notes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="jh___.css" /link>
+		<link rel="stylesheet" href="style.css" /link>
 		<title>ZFS notes</title>
 	</head>
 	<body>
