--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 		<a href=qemu_notes.html>Qemu notes</a>
 		<a href=shrink_zfs_pool.html>Shrink zfs pool</a>
 		<a href=zfs_notes.html>ZFS notes</a>
+		<p>Directories</p>
+		<a href=notes/>notes/</a>
 	</body>
 </html>
