--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="jh___.css" /link>
+		<link rel="stylesheet" href="./style.css" /link>
 		<title>Index</title>
 	</head>
 	<body>
-		<a href=qemu_notes.html>Qemu notes</a>
-		<a href=shrink_zfs_pool.html>Shrink zfs pool</a>
-		<a href=zfs_notes.html>ZFS notes</a>
+		<p>HTML</p>
+		<a href=qemu_notes.html>Qemu notes</a><br>
+		<a href=shrink_zfs_pool.html>Shrink zfs pool</a><br>
+		<a href=zfs_notes.html>ZFS notes</a><br>
+		<p>PDF</p>
 		<p>Directories</p>
-		<a href=notes/>notes/</a>
+		<a href=notes/index.html>notes/</a>
 	</body>
 </html>
