--- a/notes/index.html
+++ b/notes/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="jh___.css" /link>
+		<link rel="stylesheet" href="../style.css" /link>
 		<title>Index</title>
 	</head>
 	<body>
+		<p>HTML</p>
+		<p>PDF</p>
 		<a href="A_level.pdf">A_level.pdf</a><br>
 		<a href="Algorithms_and_programming.pdf">Algorithms_and_programming.pdf</a><br>
 		<a href="AS_Physics_Notes.pdf">AS_Physics_Notes.pdf</a><br>
@@ -17,5 +19,6 @@
 		<a href="notes.pdf">notes.pdf</a><br>
 		<a href="Pure_1.pdf">Pure_1.pdf</a><br>
 		<a href="Pure_2.pdf">Pure_2.pdf</a><br>
+		<p>Directories</p>
 	</body>
 </html>
