--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<p>HTML</p>
+		<a href=cool_programming_languages.html>Index</a><br>
 		<a href=qemu_notes.html>Qemu notes</a><br>
 		<a href=shrink_zfs_pool.html>Shrink zfs pool</a><br>
 		<a href=zfs_notes.html>ZFS notes</a><br>
