--- a/cool_programming_languages.html
+++ b/cool_programming_languages.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./style.css" /link>
-		<title>Index</title>
+		<title>Cool programming languages.</title>
 	</head>
 	<body>
 		<ul>
