--- a/cool_programming_languages.html
+++ b/cool_programming_languages.html
@@ -7,8 +7,8 @@
 	<body>
 		<ul>
 		<li><a href="https://www.adacore.com/about-ada">Ada</a></li>
-		<li><a href="http://www.ats-lang.org/">ATS</a></li>
-		<li><a href="https://www.idris-lang.org/">Idris</a></li>
+		<li><a href="http://www.ats-lang.org/">ATS</a> Dependent types, similar to C / C++.</li>
+		<li><a href="https://www.idris-lang.org/">Idris</a>Dependent types, similar to C / C++.</li>
 		<li><a href="https://www.red-lang.org/">Red</a></li>
 		</ul>
 	</body>
