--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<a href=cool_programming_languages.html>Cool programming languages.</a><br>
 		<a href=qemu_notes.html>Qemu notes</a><br>
 		<a href=shrink_zfs_pool.html>Shrink zfs pool</a><br>
+		<a href=zfs_linux_root.html>ZFS linux root</a><br>
 		<a href=zfs_notes.html>ZFS notes</a><br>
 		<p>PDF</p>
 		<p>Directories</p>
