--- a/zfs_notes.html
+++ b/zfs_notes.html
@@ -72,5 +72,6 @@
 	<h2>Increase</h2>
 	<h2>Decrease</h2>
 	<p>ZFS does not support decreasing pool size, pools can only be increased.  To "shrink" a pool, snapshot (backup) the existing pool, destroy it, then send that snapshot to a new small pool. See <a href="shrink_zfs_pool.html"/>How to shrink zfs pool.</a></p>
+	<h1><a href="zfs_linux_root.html">Linux roots ZFS</a></h1>
 	</body>
 </html>
