--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<p>HTML</p>
 		<a href=cool_programming_languages.html>Cool programming languages.</a><br>
+    		<a href=cube.html>cube.py</a><br>
 		<a href=emacs_autoinsert.html>Emacs autoinsert</a><br>
 		<a href=emacs_backup_file.html>Emacs backup file</a><br>
 		<a href=qemu_notes.html>Qemu notes</a><br>
