--- a/cube.html
+++ b/cube.html
@@ -12,6 +12,7 @@
       .tree-sitter-hl-faceXcomment {
         /* tree-sitter-hl-face:comment */
         color: #505050;
+        font-style: italic;
       }
       .tree-sitter-hl-faceXconstant {
         /* tree-sitter-hl-face:constant */
@@ -20,10 +21,12 @@
       .tree-sitter-hl-faceXconstantXbuiltin {
         /* tree-sitter-hl-face:constant\.builtin */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXconstructor {
         /* tree-sitter-hl-face:constructor */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXfunction {
         /* tree-sitter-hl-face:function */
@@ -32,6 +35,7 @@
       .tree-sitter-hl-faceXfunctionXbuiltin {
         /* tree-sitter-hl-face:function\.builtin */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXfunctionXcall {
         /* tree-sitter-hl-face:function\.call */
@@ -40,6 +44,7 @@
       .tree-sitter-hl-faceXkeyword {
         /* tree-sitter-hl-face:keyword */
         color: #5f3f7f;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXlabel {
         /* tree-sitter-hl-face:label */
@@ -60,6 +65,7 @@
       .tree-sitter-hl-faceXoperator {
         /* tree-sitter-hl-face:operator */
         color: #5f3f7f;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXproperty {
         /* tree-sitter-hl-face:property */
@@ -73,18 +79,22 @@
       .tree-sitter-hl-faceXtype {
         /* tree-sitter-hl-face:type */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXargument {
         /* tree-sitter-hl-face:type\.argument */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXbuiltin {
         /* tree-sitter-hl-face:type\.builtin */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXsuper {
         /* tree-sitter-hl-face:type\.super */
         color: #702565;
+        font-weight: bold;
       }
       .tree-sitter-hl-faceXvariable {
         /* tree-sitter-hl-face:variable */
