--- a/cube.html
+++ b/cube.html
@@ -16,93 +16,93 @@
       }
       .tree-sitter-hl-faceXconstant {
         /* tree-sitter-hl-face:constant */
-        color: #1f0f6f;
+        color: #0000c0;
       }
       .tree-sitter-hl-faceXconstantXbuiltin {
         /* tree-sitter-hl-face:constant\.builtin */
-        color: #702565;
+        color: #8f0075;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXconstructor {
         /* tree-sitter-hl-face:constructor */
-        color: #702565;
+        color: #005a5f;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXfunction {
         /* tree-sitter-hl-face:function */
-        color: #752f50;
+        color: #721045;
       }
       .tree-sitter-hl-faceXfunctionXbuiltin {
         /* tree-sitter-hl-face:function\.builtin */
-        color: #702565;
+        color: #8f0075;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXfunctionXcall {
         /* tree-sitter-hl-face:function\.call */
-        color: #1f0f6f;
+        color: #0000c0;
       }
       .tree-sitter-hl-faceXkeyword {
         /* tree-sitter-hl-face:keyword */
-        color: #5f3f7f;
+        color: #5317ac;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXlabel {
         /* tree-sitter-hl-face:label */
-        color: #7f002f;
+        color: #a0132f;
       }
       .tree-sitter-hl-faceXmethod {
         /* tree-sitter-hl-face:method */
-        color: #752f50;
+        color: #721045;
       }
       .tree-sitter-hl-faceXmethodXcall {
         /* tree-sitter-hl-face:method\.call */
-        color: #1f0f6f;
+        color: #0000c0;
       }
       .tree-sitter-hl-faceXnumber {
         /* tree-sitter-hl-face:number */
-        color: #1f0f6f;
+        color: #0000c0;
       }
       .tree-sitter-hl-faceXoperator {
         /* tree-sitter-hl-face:operator */
-        color: #5f3f7f;
+        color: #5317ac;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXproperty {
         /* tree-sitter-hl-face:property */
-        color: #1f0f6f;
+        color: #0000c0;
         font-style: italic;
       }
       .tree-sitter-hl-faceXstring {
         /* tree-sitter-hl-face:string */
-        color: #003f78;
+        color: #2544bb;
       }
       .tree-sitter-hl-faceXtype {
         /* tree-sitter-hl-face:type */
-        color: #702565;
+        color: #005a5f;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXargument {
         /* tree-sitter-hl-face:type\.argument */
-        color: #702565;
+        color: #005a5f;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXbuiltin {
         /* tree-sitter-hl-face:type\.builtin */
-        color: #702565;
+        color: #8f0075;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXtypeXsuper {
         /* tree-sitter-hl-face:type\.super */
-        color: #702565;
+        color: #005a5f;
         font-weight: bold;
       }
       .tree-sitter-hl-faceXvariable {
         /* tree-sitter-hl-face:variable */
-        color: #12506f;
+        color: #00538b;
       }
       .tree-sitter-hl-faceXvariableXparameter {
         /* tree-sitter-hl-face:variable\.parameter */
-        color: #12506f;
+        color: #00538b;
       }
 
       a {
