--- a/code_projects.html
+++ b/code_projects.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./style.css" /link>
-		<title>Code projectCode projects.<title>
+		<title>Code projectCode projects</title>
 	</head>
 	<body>
 		<p>Rubiks cube solver, in C (compile to webassembly)</p>
