--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<p>HTML</p>
+				<a href=code_projects.html>Code projectCode projects</a><br>
 				<a href=cool_programming_languages.html>Cool programming languages.</a><br>
     		<a href=cube.html>cube.py</a><br>
 				<a href=emacs_autoinsert.html>Emacs autoinsert</a><br>
