--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 	</head>
 	<body>
 		<p>HTML</p>
-				<a href=code_projects.html>Code projectCode projects</a><br>
-				<a href=cool_programming_languages.html>Cool programming languages.</a><br>
+		<a href=code_projects.html>Code projectCode projects</a><br>
+		<a href=cool_programming_languages.html>Cool programming languages.</a><br>
     		<a href=cube.html>cube.py</a><br>
-				<a href=emacs_autoinsert.html>Emacs autoinsert</a><br>
-				<a href=emacs_backup_file.html>Emacs backup file</a><br>
-				<a href=qemu_notes.html>Qemu notes</a><br>
-				<a href=shrink_zfs_pool.html>Shrink zfs pool</a><br>
-				<a href=zfs_linux_root.html>ZFS linux root</a><br>
-				<a href=zfs_notes.html>ZFS notes</a><br>
+		<a href=emacs_autoinsert.html>Emacs autoinsert</a><br>
+		<a href=emacs_backup_file.html>Emacs backup file</a><br>
+		<a href=qemu_notes.html>Qemu notes</a><br>
+		<a href=shrink_zfs_pool.html>Shrink zfs pool</a><br>
+		<a href=zfs_linux_root.html>ZFS linux root</a><br>
+		<a href=zfs_notes.html>ZFS notes</a><br>
+		<a href=zfs_share.html>Index</a><br>
 		<p>PDF</p>
 		<p>Directories</p>
+		<a href=math/index.html>math/</a>
 		<a href=notes/index.html>notes/</a>
 	</body>
 </html>
